Added form to add content from the own viewController

--- a/dynamicHeader/dynamicHeader/Base.lproj/Main.storyboard
+++ b/dynamicHeader/dynamicHeader/Base.lproj/Main.storyboard
@@ -14,25 +14,39 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9dg-wJ-nbS" customClass="DynamicHeaderScrollView" customModule="dynamicHeader" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hUa-Mf-Mmb">
+                                <rect key="frame" x="0.0" y="64" width="320" height="936"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content view" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x3d-EA-bTf">
+                                        <rect key="frame" x="85.5" y="452" width="149" height="32.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="x3d-EA-bTf" firstAttribute="centerY" secondItem="hUa-Mf-Mmb" secondAttribute="centerY" id="TX7-fQ-X4A"/>
+                                    <constraint firstItem="x3d-EA-bTf" firstAttribute="centerX" secondItem="hUa-Mf-Mmb" secondAttribute="centerX" id="aP6-hs-8oM"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9dg-wJ-nbS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1jI-xd-gSX"/>
-                            <constraint firstAttribute="trailing" secondItem="9dg-wJ-nbS" secondAttribute="trailing" id="CT0-eE-7G7"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9dg-wJ-nbS" secondAttribute="bottom" id="aIR-RZ-J8y"/>
-                            <constraint firstItem="9dg-wJ-nbS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yxc-BL-VR2"/>
+                            <constraint firstItem="hUa-Mf-Mmb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="4Bt-yb-eTR"/>
+                            <constraint firstAttribute="trailing" secondItem="hUa-Mf-Mmb" secondAttribute="trailing" id="OGo-kY-Jbk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hUa-Mf-Mmb" secondAttribute="bottom" id="V0W-AS-G03"/>
+                            <constraint firstItem="hUa-Mf-Mmb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gLP-QZ-nGF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Main" id="BMf-j9-jOb"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="1000"/>
                     <connections>
-                        <outlet property="scrollView" destination="9dg-wJ-nbS" id="CzT-cC-i17"/>
+                        <outlet property="contentView" destination="hUa-Mf-Mmb" id="TOr-Av-owh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
